[metadata]
description-file = README.md
name = saucypy
version = attr: src.VERSION
description = Python Wrapper for SauceLabs API
long_description = Import and Run SaucyPy using instructions in README.md
keywords = saucelabs, api, wrapper, sauce
license = Apache License, Version 2.0

[metadata.classifiers]
Programming Language :: Python :: 2.7

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
  saucypy/saucypy.py

[options.package_data]
* = *.txt, *.md
